k8s/cluster/drone-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: drone
  name: ingress-drone
  labels:
    app: ingress-drone
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: drone.dev.idiotz.nl
    http:
      paths:
      - backend:
          serviceName: drone
          servicePort: 80
        path: /*
  tls:
  - hosts:
    - drone.dev.idiotz.nl
    secretName: drone-dev.idiotz.nl-tls
