k8s/cluster/kube-system-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress-kube-system
  labels:
    app: ingress-kube-system
    konfd.io/template: 'true'
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
  - host: reg.dev.idiotz.nl
    http:
      paths:
      - backend:
          serviceName: kube-registry
          servicePort: 80
        path: /*
  tls:
  - hosts:
    - reg.dev.idiotz.nl
    secretName: reg-dev.idiotz.nl-tls
